<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#E9E9E9"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="26sp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/textView"
        android:gravity="right"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/name" />

    <TextView
        android:id="@+id/display_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="#00000000"
        android:ems="10"
        android:gravity="right"
        android:inputType="numberDecimal"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:textColorHint="@color/black"
        android:text="0"
        android:textSize="85sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="left"

        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2.5dp"
                android:textSize="25dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1.335"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/clear" />

            <Button
                android:id="@+id/backspace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="2"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/backspace" />

            <Button
                android:id="@+id/divided"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="2"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/divided" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="right"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/seven" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/eight" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/nine" />

            <Button
                android:id="@+id/multiplied"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/multiplied" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/four" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/five" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/six" />

            <Button
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="2.5dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/minus" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/one" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/two" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/three" />

            <Button
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/plus" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plusminus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/plusminus" />

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/zero" />

            <Button
                android:id="@+id/dot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/dot" />

            <Button
                android:id="@+id/equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="@string/equal" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>